fixed style (z-index)

--- a/vite-project/src/assets/styles/cmps/_NavMenu.scss
+++ b/vite-project/src/assets/styles/cmps/_NavMenu.scss
@@ -1,6 +1,6 @@
 .nav-menu {
   position: relative;
-  z-index: 1;
+  z-index: 1000000;
 
   .menu-btn {
     padding: 5px 5px 5px 12px;
